Name:                gtk-toy-diagrams
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple

Library
  Extensions:        TupleSections
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-core,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     MemoTrie,
                     newtype,
                     newtype-th >= 0.3,
                     vector-space
  Hs-source-dirs:    src
  Exposed-Modules:
    Graphics.UI.Gtk.Toy.Diagrams
    Graphics.UI.Gtk.Toy.Draggable
    Graphics.UI.Gtk.Toy.Button
--    Graphics.UI.Gtk.Toy.Generic
    Graphics.UI.Gtk.Toy.Prelude
    Graphics.UI.Gtk.Toy.Slider
    Graphics.UI.Gtk.Toy.Text
    Graphics.UI.Gtk.Toy.Text.Interactive
    Graphics.UI.Gtk.Toy.Transformed
    Graphics.UI.Gtk.Toy.Utils
