Name:                gtk-toy-diagrams
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple

Library
  Extensions:        TupleSections
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-core,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     MemoTrie,
                     newtype,
                     newtype-th >= 0.3,
                     vector-space
  Hs-source-dirs:    src
  Exposed-Modules:
    Graphics.UI.Toy.Diagrams
    Graphics.UI.Toy.Draggable
--    Graphics.UI.Toy.Button
--    Graphics.UI.Toy.Generic
    Graphics.UI.Toy.Prelude
    Graphics.UI.Toy.Slider
    Graphics.UI.Toy.Text
    Graphics.UI.Toy.Text.Interactive
    Graphics.UI.Toy.Transformed
    Graphics.UI.Toy.Utils