Name:                gtk-toy-diagrams
Version:             0.2.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple

Library
  Build-Depends:     base,
                     containers,
                     colour,
                     data-default,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-core >= 0.6 && < 0.7,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     MemoTrie,
                     newtype,
                     newtype-th >= 0.3,
                     vector-space,
                     vector-space-points
  Hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -O2
  Exposed-Modules:
    Graphics.UI.Toy.Diagrams
    Graphics.UI.Toy.Dict
    Graphics.UI.Toy.Draggable
    Graphics.UI.Toy.Button
    Graphics.UI.Toy.Prelude
    Graphics.UI.Toy.Slider
    Graphics.UI.Toy.Transformed
