Name:                toy-gtk-diagrams
Version:             0.3.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description:
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple
Source-repository head
  type:              git
  location:          git://github.com/mgsloan/toy-gtk-diagrams.git

Library
  Build-Depends:     base,
                     containers,
                     colour,
                     data-default,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-core >= 0.6 && < 0.8,
                     diagrams-contrib,
                     diagrams-gtk,
                     gtk,
                     lens >= 3.9 && < 3.10,
                     MemoTrie,
                     toy-interface >= 0.3 && < 0.4,
                     toy-gtk       >= 0.3 && < 0.4,
                     toy-diagrams  >= 0.3 && < 0.4,
                     vector-space,
                     vector-space-points
  Hs-source-dirs:    src
  ghc-options:       -Wall -fwarn-tabs -O2
  Exposed-Modules:
    Graphics.UI.Toy.Gtk.Diagrams
    Graphics.UI.Toy.Gtk.Dict
    Graphics.UI.Toy.Gtk.Prelude
    Graphics.UI.Toy.Gtk.Text
